fixed new zealand alignment

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -44,7 +44,6 @@ body
                 margin-left 4rem
                 width 30%
                 .g-anno 
-                    overflow hidden
                     opacity 0.3
                     &.in-focus 
                         opacity 1
